# securellm-bridge

./: .gitignore  .sops.yaml  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Makefile  README.md  TODO.md  flake.nix  package-lock.json
.github/: ci.yml  docs.yml  nix-build.yml  nix-fmt.yml
.github/workflows/: nix-check.yml  release.yml
config/: config.toml
crates/agent-tui/src/: main.rs
crates/api-server/: Cargo.toml  README.md
crates/api-server/src/: config.rs  state.rs
crates/api-server/src/routes/: chat.rs  metrics.rs
crates/api-server/src/services/: mod.rs  nats.rs
crates/api-server/tests/: chat_streaming.rs  e2e_server.rs  provider_integration.rs
crates/cli/src/: main.rs  provider_factory.rs  repl.rs
crates/context-manager/src/: lib.rs  tokenizer.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/gateway/: Cargo.toml  DEPLOY.md  ROADMAP.md
crates/gateway/src/: audit.rs  auth.rs  config.rs  errors.rs  git_ops.rs  lib.rs  oauth.rs  rate_limit.rs  routes.rs  server.rs  softwares.rs  tracing_redact.rs  transport.rs  validators.rs
crates/gateway/src/tools/: comment_pr.rs  create_pr.rs  mod.rs  push_branch.rs
crates/gateway/tests/: http_transport.rs  mission_compliance.rs  pat_zero_leak.rs  push_flow.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  deepseek.rs  groq.rs  lib.rs  llamacpp.rs  ml_ops.rs  openai.rs  openai_compat_stream.rs
crates/security/: Cargo.toml
crates/security/src/: cgroup_helper.rs  crypto.rs  lib.rs  sandbox.rs  sanitizer.rs
crates/tui/src/: app.rs  lib.rs
crates/tui/src/components/: chat_panel.rs  context_panel.rs  logs_panel.rs  mod.rs  (+5 more)
crates/voice-agents/src/: audio_playback.rs  lib.rs
dashboard/: index.html  pnpm-lock.yaml  tailwind.config.js
dashboard/src/: App.tsx  index.css
dashboard/src/hooks/: useApi.ts
dashboard/src/lib/: api.ts  open-core-data.ts  utils.ts
dashboard/src/pages/: Gateway.tsx  Intelligence.tsx  OpenCore.tsx  Projects.tsx  Security.tsx  Settings.tsx
dashboard/src/stores/: dashboard.ts
dashboard/src/types/: index.ts
docker/: Dockerfile  docker-compose.yml  gateway.Dockerfile
docs/: GETTING_STARTED.md  PUBLIC-REGISTRY-ARCHITECTURE.md  QUICK_START.md  TODO_PRODUCTION.md
nix/modules/: gateway-service.nix  sandbox.nix
secrets/: secrets.yaml
ux/: README.md
ux/tools/: bridge-ux-server.ts
(+11 files in other folders)
