[package]
name = "securellm-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP gateway that lets sandboxed agents push/PR/comment on GitHub without seeing credentials"

[[bin]]
name = "gateway-mcp"
path = "src/bin/gateway-mcp.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# MCP
rmcp = { workspace = true }
axum = { workspace = true }

# GitHub
octocrab = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "1.2"

# Secrets / redaction
secrecy = { workspace = true }

# Rate limiting
governor = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Errors
thiserror = { workspace = true }
anyhow = { workspace = true }

# IDs / time / hashes
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

# Patch handling
base64 = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
reqwest = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process"] }
