[package]
name = "securellm-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cgroup-helper"
path = "src/bin/cgroup-helper.rs"

[dependencies]
# Core dependency
securellm-core = { path = "../core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Security/Crypto
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-native-certs = "0.8"
ring = { workspace = true }
argon2 = { workspace = true }
secrecy = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Sanitizer (PII detection, prompt injection)
regex = "1.11"
once_cell = "1.20"
uuid = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
